# Riemann-J-Cognitive-Architecture

./: .gitignore  Architectural-alignment-todo.md  GODELOS_IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  ROADMAP.md  SCRIPTS_GUIDE.md  SCRIPT_SUMMARY.txt  SETUP_DEMO.md  TEST_RESULTS.md  VERIFICATION_CHECKLIST.md  architecture.py  config.py  consciousness_test_FINAL.txt  consciousness_test_FINAL2.txt  consciousness_test_output_fixed.txt  consciousness_test_results.json  crisis_analysis_real_model.npz  crisis_analysis_results.npz  default_cli_identity  demo_adversarial  demo_comparison  demo_reasoning  demo_reconsider  demo_trajectory  pn_driver.py  pyproject.toml  qwen_demo_full.txt  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup_venv.bat  setup_venv.sh  shared_resources.py  test  test.bat  test.sh  test_j_operator_comprehensive.py  (+14 more)
.devcontainer/: README.md  devcontainer.json
.github/: AGENT_SETUP.md
.github/coding-agent/: config.yml  run_agent.sh
demos/: README.md  demo_adversarial_simple.py  demo_adversarial_transparency.py  demo_adversarial_transparency_simple.py  demo_cli_features.py  demo_formative_narrative.py  demo_formative_simple.py  demo_reasoning_simple.py  demo_uncertainty_gated_reasoning.py
docs/: CLI_FEATURES.md  CLI_ROADMAP.md  CLI_USER_GUIDE.md  IMPLEMENTATION_MODEL_UPGRADE.md  J_OPERATOR_CONVERGENCE_IMPROVEMENTS.md  REPOSITORY_SUMMARY.md  TUI_SCREENSHOT_ANALYSIS.md  godelos.md
docs/api/: API_REFERENCE.md
docs/architecture/: CoreArch.md  DECODER_PROJECTION_ANALYSIS.md  GodelOS_takeaways.md  OVERVIEW.md
docs/assets/: README.md
sessions/: default_cli_identity_autosave.json
tests/: README.md  __init__.py  conftest.py  consciousness_battery_phase5.py  exploratory_j_operator_crisis.py  exploratory_j_operator_crisis_lightweight.py  exploratory_j_operator_production.py  exploratory_j_operator_real_model.py  integration_cli.py  integration_phase1_metacognition.py  integration_phase4_advanced.py  integration_phase4_conscious_agent.py  validate_convergence_heuristic.py
(+33 files in other folders)
